@@ -161,6 +161,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Stack
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -2785,12 +2795,19 @@ operator|=
 name|ns
 expr_stmt|;
 block|}
-comment|/**      * Throws an exception if the module descriptor is inconsistent For the moment, only extended      * configurations existence is checked      */
+comment|/**      * Throws an exception if the module descriptor is inconsistent       * For the moment, only extended configurations existence and cycles are checked      */
 specifier|public
 name|void
 name|check
 parameter_list|()
 block|{
+name|Stack
+name|confs
+init|=
+operator|new
+name|Stack
+argument_list|()
+decl_stmt|;
 for|for
 control|(
 name|Iterator
@@ -2848,13 +2865,20 @@ name|i
 operator|++
 control|)
 block|{
-if|if
-condition|(
-operator|!
-name|configurations
+name|confs
 operator|.
-name|containsKey
+name|push
 argument_list|(
+name|conf
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|checkConf
+argument_list|(
+name|confs
+argument_list|,
 name|ext
 index|[
 name|i
@@ -2863,6 +2887,113 @@ operator|.
 name|trim
 argument_list|()
 argument_list|)
+expr_stmt|;
+name|confs
+operator|.
+name|pop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+specifier|private
+name|void
+name|checkConf
+parameter_list|(
+name|Stack
+name|confs
+parameter_list|,
+name|String
+name|confName
+parameter_list|)
+block|{
+name|int
+name|index
+init|=
+name|confs
+operator|.
+name|indexOf
+argument_list|(
+name|confName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|index
+operator|!=
+operator|-
+literal|1
+condition|)
+block|{
+name|StringBuffer
+name|cycle
+init|=
+operator|new
+name|StringBuffer
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+init|;
+name|index
+operator|<
+name|confs
+operator|.
+name|size
+argument_list|()
+condition|;
+name|index
+operator|++
+control|)
+block|{
+name|cycle
+operator|.
+name|append
+argument_list|(
+name|confs
+operator|.
+name|get
+argument_list|(
+name|index
+argument_list|)
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|" => "
+argument_list|)
+expr_stmt|;
+block|}
+name|cycle
+operator|.
+name|append
+argument_list|(
+name|confName
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"illegal cycle detected in configuration extension: "
+operator|+
+name|cycle
+argument_list|)
+throw|;
+block|}
+name|Configuration
+name|conf
+init|=
+name|getConfiguration
+argument_list|(
+name|confName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|conf
+operator|==
+literal|null
 condition|)
 block|{
 throw|throw
@@ -2871,21 +3002,78 @@ name|IllegalStateException
 argument_list|(
 literal|"unknown configuration '"
 operator|+
-name|ext
-index|[
-name|i
-index|]
+name|confName
 operator|+
 literal|"'. It is extended by "
 operator|+
+name|confs
+operator|.
+name|get
+argument_list|(
+name|confs
+operator|.
+name|size
+argument_list|()
+operator|-
+literal|1
+argument_list|)
+argument_list|)
+throw|;
+block|}
+name|String
+index|[]
+name|ext
+init|=
+name|conf
+operator|.
+name|getExtends
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|ext
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|confs
+operator|.
+name|push
+argument_list|(
 name|conf
 operator|.
 name|getName
 argument_list|()
 argument_list|)
-throw|;
-block|}
-block|}
+expr_stmt|;
+name|checkConf
+argument_list|(
+name|confs
+argument_list|,
+name|ext
+index|[
+name|i
+index|]
+operator|.
+name|trim
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|confs
+operator|.
+name|pop
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 specifier|public
