@@ -1195,6 +1195,11 @@ name|ParseException
 name|ex
 parameter_list|)
 block|{
+name|ex
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
 name|assertTrue
 argument_list|(
 literal|"invalid exception: "
@@ -1212,6 +1217,130 @@ operator|.
 name|indexOf
 argument_list|(
 literal|"invalidConf"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
+name|testCyclicConfs
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+try|try
+block|{
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-cyclic-confs1.xml"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"bad ivy file raised no error"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|ex
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"invalid exception: "
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"A => B => A"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+name|XmlModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+name|settings
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-cyclic-confs2.xml"
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"bad ivy file raised no error"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|ex
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"invalid exception: "
+operator|+
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|,
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|indexOf
+argument_list|(
+literal|"A => C => B => A"
 argument_list|)
 operator|!=
 operator|-
